# GInGeR

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  MANIFEST.in   README.md  assembly_utils.py  constants.py  extract_contexts_candidates.py  ginger.py  ginger.yml  ginger_conda_env.yml  ginger_minimal_env.yml  hybrid_assembly_utils.py  in_out_paths_approach.py  kraken2_db_uhgg_v2.0.2  locate_genes.py  locating_genes_in_graph.py  matches_classes.py  pipeline_utils.py  process_context_candidates.py  pyproject.toml  reference_database_utils.py  run_baseline_algorithm_experiment.sh  run_ginger_command_line_job.sh  run_ginger_from_python.py  run_ginger_job.sh  sequence_alignment_utils.py  slurm-4218223.out  slurm-4583105.out  test_ginger.sh  verify_context_candidates.py
.github/: copilot-instructions.md
e2e_test_output/: all_in_paths.fasta  all_out_paths.fasta  context_level_matches.csv  genes_to_contigs.m8  genes_to_contigs.paf  in_paths_to_reference.paf  kraken_output_file.tsv  out_paths_to_reference.paf  species_level_matches.csv
ginger/: __init__.py  assembly_utils.py  constants.py  extract_contexts_candidates.py  ginger_runner.py  locating_genes_in_graph.py  matches_classes.py  pipeline_utils.py  plasmid_detection_utils.py  reference_database_utils.py  run_ginger_from_python.py  sequence_alignment_utils.py  verify_context_candidates.py
test_outputs/: all_in_paths.fasta  all_out_paths.fasta  genes_to_contigs.paf  in_paths_to_reference.paf  out_paths_to_reference.paf  output_pickled.pkl  species_level_output_test.csv
tests/: context_level_output.pkl  e2e_test.py  (+18 more)
(+71 files in other folders)
