[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ginger"
version = "0.0.1"
authors = [
  { name="Netta Barak", email="netta.barak@mail.huji.ac.il" },
]
description = "description details "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/yassourlab/GInGeR"
"Bug Tracker" = "https://github.com/yassourlab/GInGeR/issues"

[project.scripts]
run_ginger = 'ginger.ginger_runner:run_ginger_e2e'
